# MemEvolve-API

./: .docker.env.example  .dockerignore  .env.docker.example  .env.example  .env.example.docker  .env.old  .gitignore  AGENTS.backup  AGENTS.md  API_RENAME.md  CONFIG_VIOLATIONS.md  CURRENT_DEV.md  CURRENT_DEV_TASKS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_SESSION_SUMMARY.md  Dockerfile  EVOLUTION_EMBEDDING_DESIGN.md  EVOLUTION_EMBEDDING_SUMMARY.md  EVOLUTION_IMPLEMENTATION_PLAN.md  EvoSys-TODO.md  KNOWN_ISSUES.md  LICENSE  MemEvolve_systems_summary.md  PRODUCTION_READINESS_REPORT.md  PROJECT.md  README.md  TODO.md  analysis_229_iterations.md  config.yaml.backup  debug_test.py  dev_tasks.md  diverse_questions_tracking.md  docker-compose.yml  encoder_memory_unification_plan.md  fresh_test_analysis.md  ivf_implementation_plan.md  json_parsing_fix_plan.md  performance_stats.md  pyproject.toml  pytest.ini  (+10 more)
aarXiv-2512.18746v1/: 00README.json  cite.bib  common.tex  paper.bbl
arXiv-2512.18746v1/: acknowledge.tex  oppo.cls  paper.tex
cache/: evolution_state.json
current_dev/: AUTO_EVOLUTION_VERIFICATION.md  COMPREHENSIVE_ANALYSIS_PLAN.md  COMPREHENSIVE_SOLUTION_SUMMARY.md  ENVIRONMENT_VARIABLES_ANALYSIS.md  JAN-23-2026_200-testrun-analysis.md  OVERNIGHT_PERFORMANCE_REPORT.md
docs/: EMBEDDING_CONFIG.md  api-reference.md  api_wrapper_guide.md  configuration_guide.md  deployment_guide.md  developer_onboarding.md  getting-started.md  index.md  troubleshooting.md
examples/: README.md  basic_usage.py  embedding_config.py  graph_store_example.py
experiments/: baseline_results_20260119_173932.json  baseline_results_20260119_173955.json  baseline_results_20260119_174104.json  experiment_summary_20260119_173932.json  experiment_summary_20260119_173932.txt  experiment_summary_20260119_173955.json  experiment_summary_20260119_173955.txt  experiment_summary_20260119_174104.json  experiment_summary_20260119_174104.txt
reports/: memory_pipeline_performance_report.md  perfdata_20260212_195806.md
scripts/: README.md  README_performance_analyzer.md  business_impact_analyzer.py  cleanup_evolution.sh  cleanup_fresh.sh  cleanup_logs.sh  cleanup_memory.sh  deploy.sh  format.sh  generate_test_data.py  init_memory_system.py  iterative_prompts.sh  lint.sh  memory_consolidate.py  memory_deduplicate.py  memory_forget.py  memory_prune.py  (+7 more)
(+198 files in other folders)
